# subscription_api_rust

./: Cargo.toml
.github/workflows/: rust.yml
notes/: db.md
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
