[package]
name = "subscription-api-rust"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "subscription-api-rust"


[dependencies]
actix-web = "4.5.1"
reqwest = "0.12.3"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "~0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]}
config = "~0.14"
